--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.5.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.15.0",
-    "axios": "^1.5.0",
-    "recharts": "^2.8.0",
-    "react-icons": "^4.11.0"
+    "recharts": "^2.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,9 +36,9 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
+    "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.3"
   },
   "proxy": "http://localhost:5000"
